@@ -14,9 +14,9 @@ import java.util.ArrayList;
 import java.util.List;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.debug.core.DebugException;
-import org.eclipse.debug.internal.ui.model.viewers.AsynchronousTreeModelViewer;
-import org.eclipse.debug.internal.ui.viewers.TreePath;
-import org.eclipse.debug.internal.ui.viewers.TreeSelection;
+import org.eclipse.debug.internal.ui.viewers.AsynchronousTreeViewer;
+import org.eclipse.jface.viewers.TreePath;
+import org.eclipse.jface.viewers.TreeSelection;
 import org.eclipse.swt.widgets.TreeItem;
 
 /**
@@ -32,7 +32,7 @@ public abstract class AbstractViewerState {
 	/**
 	 * Constructs a memento for the given viewer.
 	 */
-	public AbstractViewerState(AsynchronousTreeModelViewer viewer) {
+	public AbstractViewerState(AsynchronousTreeViewer viewer) {
 		saveState(viewer);
 	}
 
@@ -42,7 +42,7 @@ public abstract class AbstractViewerState {
 	 * 
 	 * @param viewer viewer of which to save the state
 	 */
-	public void saveState(AsynchronousTreeModelViewer viewer) {
+	public void saveState(AsynchronousTreeViewer viewer) {
 		List expanded = new ArrayList();
 		fSavedExpansion = null;
 		TreeItem[] items = viewer.getTree().getItems();
@@ -114,7 +114,7 @@ public abstract class AbstractViewerState {
 	 * 
 	 * @param viewer viewer to which state is restored
 	 */
-	public void restoreState(AsynchronousTreeModelViewer viewer) {
+	public void restoreState(AsynchronousTreeViewer viewer) {
 	    boolean expansionComplete = true;
 	    if (fSavedExpansion != null && fSavedExpansion.size() > 0) {
 			for (int i = 0; i < fSavedExpansion.size(); i++) {
@@ -175,6 +175,6 @@ public abstract class AbstractViewerState {
 	 * @return element represented by the path, or <code>null</code> if none
 	 * @throws DebugException if unable to locate a variable
 	 */
-	protected abstract TreePath decodePath(IPath path, AsynchronousTreeModelViewer viewer) throws DebugException;
+	protected abstract TreePath decodePath(IPath path, AsynchronousTreeViewer viewer) throws DebugException;
 
 }
