@@ -16,8 +16,8 @@ import org.eclipse.cdt.debug.internal.ui.views.AbstractViewerState;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.debug.core.DebugException;
-import org.eclipse.debug.internal.ui.model.viewers.AsynchronousTreeModelViewer;
-import org.eclipse.debug.internal.ui.viewers.TreePath;
+import org.eclipse.debug.internal.ui.viewers.AsynchronousTreeViewer;
+import org.eclipse.jface.viewers.TreePath;
 import org.eclipse.swt.widgets.Tree;
 import org.eclipse.swt.widgets.TreeItem;
  
@@ -29,7 +29,7 @@ public class ModulesViewerState extends AbstractViewerState {
 	/** 
 	 * Constructor for ModulesViewerState. 
 	 */
-	public ModulesViewerState( AsynchronousTreeModelViewer viewer ) {
+	public ModulesViewerState( AsynchronousTreeViewer viewer ) {
 		super( viewer );
 	}
 
@@ -49,7 +49,7 @@ public class ModulesViewerState extends AbstractViewerState {
 	/* (non-Javadoc)
 	 * @see org.eclipse.cdt.debug.internal.ui.views.AbstractViewerState#decodePath(org.eclipse.core.runtime.IPath, org.eclipse.debug.internal.ui.model.viewers.AsynchronousTreeModelViewer)
 	 */
-	protected TreePath decodePath( IPath path, AsynchronousTreeModelViewer viewer ) throws DebugException {
+	protected TreePath decodePath( IPath path, AsynchronousTreeViewer viewer ) throws DebugException {
 		String[] names = path.segments();
 		Tree tree = viewer.getTree();
 		TreeItem[] items = tree.getItems();
